Not a jQuery plugin anymore. More extendable.

--- a/example/index.html
+++ b/example/index.html
@@ -81,9 +81,8 @@
       </form>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script src="https://raw.github.com/benbarnett/jQuery-Animate-Enhanced/master/jquery.animate-enhanced.min.js"></script>
     <script src="https://raw.github.com/documentcloud/underscore/master/underscore-min.js"></script>
-    <script src="../preempt.min.js"></script>
+    <script src="../src/Preempt.js"></script>
     <script src="./js/example.js"></script>
   </body>
 </html>
