Updating examples with onClick

--- a/example/index-custom.html
+++ b/example/index-custom.html
@@ -93,6 +93,10 @@
         height:102px;
       }
 
+      .selected {
+        border: 1px solid #bc4;
+      }
+
     </style>
   </head>
   <body>
